# intelli-prep-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 103c74906a01_initial_migration.py  40529fe4cdb1_add_incomplete_status_and_float_order_.py  84a0865ab4dc_rename_interviewtype_enum_behavioural_.py  b7a653634da7_apply_delete_cascades_to_foreign_keys.py  bea424559345_add_delete_cascades_to_fks.py
app/: main.py
app/agents/: graph.py  should_continue.py  state.py
app/agents/nodes/: answer_evaluator.py  final_evaluator.py  fit_scorer.py  follow_up_decider.py  interview_loop.py  jd_analyzer.py  question_generator.py  resume_parser.py
app/agents/schemas/: __init__.py  answer_evaluator_schema.py  final_evaluator_schema.py  fit_scorer_schema.py  follow_up_decider_schema.py  question_generator_schema.py
app/api/: dependencies.py
app/api/routes/: analytics.py  auth.py  interview_session.py  job_application.py  resume.py
app/api/websocket/: interview_ws.py
app/core/: config.py  llm.py
app/db/: database.py
app/models/: __init__.py  answer.py  evaluation.py  interview_session.py  job_application.py  question.py  resume.py  user.py
app/schemas/: analytics.py  auth.py  interview_session.py  job_application.py  resume.py
app/services/: analytics_service.py  auth_service.py  interview_session_service.py  job_application_service.py  resume_service.py
app/utils/: security.py
